--- a/authorization-server/src/main/resources/templates/error.html
+++ b/authorization-server/src/main/resources/templates/error.html
@@ -5,10 +5,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>$Title$</title>
+    <title>授权</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/bootstrap/css/bootstrap.min.css}">
+    <script type="text/javascript" th:src="@{/jquery/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
+    <style>
+        body{
+            padding-top: 60px;
+        }
+        .navbar-inverse{
+            background-color: #322;
+        }
+    </style>
 </head>
 
 <body>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="">OAuth实战: <span class="label label-danger">OAuth 认证服务</span></a>
+        </div>
+    </div>
+</nav>
+<div class="container">
+    <div class="jumbotron">
+        <h2 class="text-danger">Error</h2>
+        <div th:text="${error}"></div>
+
+
+    </div>
+</div>
+
 
 </body>
 
